--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.0",
     "react-scripts": "^4.0.3",
+    "react-scroll": "^1.8.4",
     "react-scroll-to": "^3.0.0-beta.6",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1",
@@ -52,6 +53,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
-    "@types/react-router-dom": "^5.1.8"
+    "@types/react-router-dom": "^5.1.8",
+    "@types/react-scroll": "^1.8.3"
   }
 }
