--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
     "i18next": "^21.9.1",
+    "i18next-http-backend": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.18.6",
