--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@testing-library/user-event": "^12.8.1",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-scroll": "^1.8.3",
-    "cypress": "^10.10.0"
+    "cypress": "^10.10.0",
+    "eslint": "^7.32.0"
   }
 }
